# ai-learning

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.nsight  NSIGHT_STREAMER.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.cursor/rules/: learning.mdc
configs/: README.md  config.yaml
configs/experiment/: cnn_autoencoder_1.yaml
configs/model/: cnn_autoencoder.yaml  nvtx_vanilla_autoencoder.yaml
configs/profiling/: nvtx.yaml
configs/training/: default.yaml  profiling.yaml
scripts/: hydra_training.py  profile_training.py  test_hydra_config.py  validate_dataloader.py
src/encoding_101/: 01_vanilla_autoencoder.py  02_conv_autoencoder.py  README.md  __init__.py  data.py  metrics.py  utils.py
src/encoding_101/mixins/: __init__.py  nvtx.py
src/encoding_101/models/: __init__.py  autoencoder_annotated.py  base.py  cnn_autoencoder.py  conv_autoencoder.py  nvtx_autoencoder.py  vanilla_autoencoder.py
src/encoding_101/training/: __init__.py  trainer.py
src/encoding_101/visualization/: __init__.py  mar_viz.py
